force-app/main/default/objects/Installed_Unit__c/Installed_Unit__c.object-meta.xml
<CustomObject>
    <label>Installed Unit</label>
    <nameField>
        <displayFormat>IU-{0000}</displayFormat>
        <label>Installed Unit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installed Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>