force-app/main/default/objects/Installed_Unit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Installed Units</relationshipLabel>
    <relationshipName>R00N50000001ddNqEAI</relationshipName>
    <type>Lookup</type>
</CustomField>