force-app/main/default/objects/Installed_Unit__c/fields/Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Date__c</fullName>
    <label>Installation Date</label>
    <type>Date</type>
</CustomField>