force-app/main/default/objects/Installed_Unit__c/fields/Installed_Product__c.field-meta.xml
<CustomField>
    <fullName>Installed_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installed Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Installed Units</relationshipLabel>
    <relationshipName>R00N50000001ddO0EAI</relationshipName>
    <type>Lookup</type>
</CustomField>