force-app/main/default/objects/Installed_Unit__c/fields/Serial__c.field-meta.xml
<CustomField>
    <fullName>Serial__c</fullName>
    <label>Serial #</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>